# trasposa

./: README.md  pyproject.toml  trasposa.py
