[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trasposa"
version = "1.0.0"
description = "Audio pitch and speed modifier with normalization and playback"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "Valerio Poggi"}
]
dependencies = [
  "librosa>=0.10.0",
  "soundfile",
  "sounddevice",
  "pynput"
]

[project.urls]
Homepage = "https://github.com/klunk386/trasposa"

[project.scripts]
trasposa = "trasposa:main"
